--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -15,8 +15,11 @@ main:
     - text: "AI Researcher"
     - text: "Robotics Researcher"
     - text: "Technology Consultant"
-    - text: "Programmer"
+    - text: "Developer"
   social:
+    - title: "Mail"
+      icon: "envelope"
+      url: "mailto:Tim.Salzmann@gmail.com"
     - title: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/timsalzmann/"
