--- a/_data/content.yml
+++ b/_data/content.yml
@@ -8,7 +8,7 @@ about:
   title: "About Me"
   text: "
         <p>
-          <strong>Hello! I’m Tim.</strong><br> I am a PhD candidate in Robotics and AI. I am passionate about discovering and researching new technology and transferring these skills to new fields.
+          <strong>Hello! I’m Tim.</strong><br> I am a doing a PhD in Robotics and AI with the Autonomous Aerial Systems Lab at TUM. I am passionate about discovering and researching new technology.
         </p>
         "
   list:
@@ -163,46 +163,82 @@ resume:
     title: "Experience"
     icon: "briefcase"
     items:
-      - year: "2013 - Present"
-        role: "Art Director"
-        company: "Facebook Inc."
-        text: "Collaborate with creative and development teams on the execution of ideas."
+      - year: "2020"
+        role: "Freelancer Consultant for Development and Data Science."
+        company: "epap GmbH."
+        text: "Development of new product area: Connecting epap to financial data providers for fintech use cases. Consulting for Machine Learning and Big Data development."
+        active: 0
+        h_line: 1
+
+      - year: "2018 - 2019"
+        role: "Technology Research Intern for Autonomous Driving"
+        company: "BMW of North America, LLC"
+        text: "Creation of a proof-of-concept closed-loop autonomous driving system. This included all relevant steps such as planning, system design, data collection, implementation, simulation, integration, and testing. Implementation included, but was not limited to, machine learning and path/trajectory planning."
+        active: 0
+        h_line: 1
+
+      - year: "2017 - 2018"
+        role: "Working Student for Customer Relationship Management & Marketing"
+        company: "CNC - Communications & Network Consulting"
+        text: "Project management, organization and implementation of a Digital Marketing Big-Data project involving multiple stakeholders. Development and Maintenance of a Microsoft Dynamics system (CRM)."
+        active: 0
+        h_line: 0
+
+      - year: "2011 - 2017"
+        role: "Freelancer Motosports Communication & Event Management"
+        company: "motorsport.tv"
+        text: "Commentator and editorial support."
+        active: 0
+        h_line: 0
+
+      - year: "2016 - 2017"
+        role: "Working Student for Highly Automated and Autonomous Driving"
+        company: "BMW Group"
+        text: "Planning and implementation of a rapid prototyping framework (based on ROS) for automated driving. In addition, integration of this framework on vehicle prototypes including various sensors. Research for machine learning models for trajectory prediction of traffic participants. This included setting up a data processing pipeline to process vehicle traces from the prototypes into machine learning data sets."
+        active: 0
+        h_line: 0
+
+      - year: "2016"
+        role: "Junior Consultant for Technology and Software Consulting"
+        company: "TNG Technology Consulting"
+        text: "Development of machine learning models and artificial intelligence strategies and algorithms for fraud detection in the telecommunications sector."
+        active: 0
+        h_line: 0
+
+      - year: "2014 - 2016"
+        role: "Intern"
+        company: "BMW Motorsports"
+        text: "Track Engineering and Simulation."
+        active: 0
+        h_line: 0
+
+  education:
+    title: "Academic"
+    icon: "university"
+    items:
+      - year: "2020 - Present"
+        institution: "Technical University Munich"
+        city: "Stanford"
+        text: "PhD Candidate in the Autonomous Aerial Systems Lab of Prof. Markus Ryll"
         active: 1
         h_line: 1
 
-      - year: "2011 - 2012"
-        role: "Front-end Developer"
-        company: "Google Inc."
-        text: "Monitored technical aspects of the front-end delivery for several projects."
-        active: 0
+      - year: "2019 - 2020"
+        institution: "Stanford University"
+        city: "Stanford"
+        text: "Research Assistant in the Autonomous Systems Lab of Prof. Marco Pavone"
         h_line: 1
 
-      - year: "2009 - 2010"
-        role: "Senior Developer"
-        company: "Abc Inc."
-        text: "Optimize website performance using latest technology."
-        active: 0
-        h_line: 0
-  education:
-    title: "Education"
-    icon: "university"
-    items:
-      - year: "2006 - 2008"
-        institution: "Art University"
-        city: "New York"
-        text: "Bachelor's Degree in Computer Science ABC Technical Institute, Jefferson, Missouri"
+      - year: "2016 - 2019"
+        institution: "Technical University Munich"
+        city: "Munich"
+        text: "Bachelor's Degree in Robotics, Cognition, Intelligence"
         h_line: 1
 
-      - year: "2005 - 2006"
-        institution: "Programming Course"
-        city: "Paris"
-        text: "Coursework - Git, WordPress, Javascript, iOS, Android."
-        h_line: 1
-
-      - year: "2004 - 2005"
-        institution: "Web Design Course"
-        city: "London"
-        text: "Converted Photoshop layouts to web pages using HTML, CSS, and JavaScript"
+      - year: "2012 - 2016"
+        institution: "Technical University Ingolstadt"
+        city: "Ingolstadt"
+        text: "Bachelor's Degree in Computer Science and Car Technology"
         h_line: 0
 
 ### Skills [ skills ]
