--- a/_data/content.yml
+++ b/_data/content.yml
@@ -107,7 +107,7 @@ about:
 
 ### Facts [ facts ]
 facts:
-  title: "Fun Facts"
+  title: ""
   items:
     - icon: "document-text"
       name: "3 peer-reviewed Papers"
