--- a/_data/content.yml
+++ b/_data/content.yml
@@ -118,7 +118,7 @@ facts:
     - icon: "earth"
       name: "Lived on 4 Continents"
 
-    - icon: "telescope"
+    - icon: "speedometer"
       name: "6 years of Research Experience"
 
 ### Clients [ clients ]
