--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ main:
 
   #projects card
   - title: "projects"
-    icon: "library"
+    icon: "jet"
     slug: "projects"
     sections:
         - portfolio
