--- a/_data/content.yml
+++ b/_data/content.yml
@@ -8,7 +8,7 @@ about:
   title: "About Me"
   text: "
         <p>
-          <strong>Hello! I’m Tim.</strong><br> I am a doing a PhD in Robotics and AI with the Autonomous Aerial Systems Lab at TUM. I am passionate about discovering and researching new technology.
+          <strong>Hi! I’m Tim.</strong><br> I am a PhD student in Robotics and AI. I am affiliated with the Autonomous Aerial Systems Lab at TUM, the Autonomous Systsems Lab at Stanford University and Google Brain Research. I am passionate about discovering and researching new technology.
         </p>
         "
   list:
@@ -110,7 +110,7 @@ facts:
   title: ""
   items:
     - icon: "document-text"
-      name: "4 peer-reviewed Papers"
+      name: "5 peer-reviewed Papers"
 
     - icon: "university"
       name: "Attended 5 different Universities"
@@ -119,7 +119,7 @@ facts:
       name: "Lived on 4 Continents"
 
     - icon: "speedometer"
-      name: "8 years of Research Experience"
+      name: "10 years of Research Experience"
 
 ### Clients [ clients ]
 # clients:
@@ -163,6 +163,13 @@ resume:
     title: "Experience"
     icon: "briefcase"
     items:
+      - year: "2022-2023"
+        role: "Researcher"
+        company: "Google | Brain"
+        text: "Research in embedded Artificial Intelligence."
+        active: 1
+        h_line: 1
+        
       - year: "2021"
         role: "AI Resident"
         company: "Google | X - The Moonshot Factory"
@@ -227,6 +234,13 @@ resume:
         institution: "Technical University Munich"
         city: "Munich"
         text: "PhD Candidate in the Autonomous Aerial Systems Lab of Prof. Markus Ryll"
+        active: 1
+        h_line: 1
+        
+      - year: "2023"
+        institution: "Stanford University"
+        city: "Stanford"
+        text: "Researcher with the Autonomous Systems Lab of Prof. Marco Pavone and the Intelligent and Interactive Autonomous Systems Group of Prof. Dorsa Sadigh"
         active: 1
         h_line: 1
 
