--- a/_data/content.yml
+++ b/_data/content.yml
@@ -10,6 +10,8 @@ about:
         <p>
           <strong>Hi! I’m Tim.</strong><br> I am a PhD student in Robotics and AI. I am affiliated with the Autonomous Aerial Systems Lab at TUM, the Autonomous Systems Lab at Stanford University and Google DeepMind. I am passionate about discovering and researching new technology.
         </p>
+
+        <a href="https://scholar.google.de/citations?user=r4hMllQAAAAJ">Visit my Scholar Page</a>
         "
 #   list:
 #     - label: "Residence"
